--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
