--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4",
-    "graphql": "^15.5.0"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
