--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,7 @@
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3",
-    "graphql": "^15.5.0"
+    "nodemon": "^2.0.3"
   },
   "description": ""
 }
